# zipyphus

./: .gitignore  README.md  __init__.py  main.py  minified.py  pyproject.toml
test/: test.py  test_corpus.py  test_general.py
test/corpus/brown_corpus/: xaa  xab  xac  xad  xae  xaf  xag  xah  xai  xaj  xak  xal  xam  xan  xao  xap  xaq  xar  xas  xat  xau  xav  xaw  xax  xay  xaz  xba  xbb  xbc  xbd  xbe  xbf  xbg  xbh  xbi  xbj  xbk  xbl  xbm  xbn  (+456 more)
