[project]
name = "zipy"
version = "0.0.1"
authors = [
    {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
description = "Very simple zip file utility for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest",
]